# rust-mmap-allocator

./: .travis.yml  Cargo.toml  README.md
.circleci/: config.yml
docs/: search-index.js  settings.html  source-files.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/mmap_allocator/: all.html  fn.page_size.html  index.html  sidebar-items.js  struct.MmapAllocator.html
docs/mmap_allocator/mmap_allocator/: fn.page_size.html  struct.MmapAllocator.html
docs/src/libc/: fixed_width_ints.rs.html  lib.rs.html  macros.rs.html
docs/src/libc/unix/: align.rs.html  mod.rs.html
docs/src/libc/unix/linux_like/: mod.rs.html
docs/src/libc/unix/linux_like/linux/: align.rs.html  mod.rs.html
docs/src/libc/unix/linux_like/linux/gnu/: align.rs.html  mod.rs.html
docs/src/libc/unix/linux_like/linux/gnu/b64/: mod.rs.html
docs/src/libc/unix/linux_like/linux/gnu/b64/x86_64/: align.rs.html  mod.rs.html  not_x32.rs.html
docs/src/mmap_allocator/: lib.rs.html  mmap_allocator.rs.html
src/: lib.rs  mmap_allocator.rs
