[package]
name = "allocators"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "structs implementing trait std::alloc::GlobalAlloc"
repository = "https://github.com/wbcchsyn/rust-allocators.git"
license = "Apache-2.0 OR LGPL-3.0-or-later"
readme = "README.md"

keywords = ["alloc", "allocator", "memory"]
categories = ["memory-management"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.67"
